# big-csv-etl

./: .gitignore  README.md
analyzer/: CMakeLists.txt  analyzeItem.cpp  analyzeItem.h  analyzerMapper.cpp  analyzerMapper.h  analyzerMaster.cpp  analyzerMaster.h  analyzerReducer.cpp  analyzerReducer.h  analyzor  main.cpp
generator/: CMakeLists.txt  generator  generator.cpp  generator.h  main.cpp
